--- a/src/pages/Budget/Budget.css
+++ b/src/pages/Budget/Budget.css
@@ -38,6 +38,10 @@
     transform: scale(1.1);
 }
 
+.clicked{
+    transform: scale(1.1);
+}
+
 .budget-cards .card-two{
     background: linear-gradient(45deg, rgba(194, 56, 204, 0.8), rgba(181, 84, 242, 1)),
     linear-gradient(-45deg, rgba(181, 84, 242, 1), rgba(194, 56, 204, 0.8)),
