--- a/Client/src/pages/Dashboard/Dashboard.css
+++ b/Client/src/pages/Dashboard/Dashboard.css
@@ -1,6 +1,4 @@
 .dashboard-component{
-    background: #000;
-    color: #FFFFFF;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,8 +10,7 @@
 }
 
 .dashboard{
-    background: #FFFFFF;
-    color: #000000;
+   border: 3px dashed #ca5ad9;
     margin: 0 1rem;
     padding: 1rem;
     border-radius: 10px;
@@ -57,6 +54,7 @@
 
 .dashboard .side-one .daily-info{
     margin-top: 6rem;
+    /* border: 1px solid; */
 }
 
 .dashboard .side-one .daily-info h4{
